--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.header {
+  position: fixed;
+  top: 0; 
+  left: 0;
+  right: 0;
+}
+
+.footer {
+  position: absolute; 
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
