--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,5 @@
 <div class="navbar bg-primary text-primary-content">
   <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
+  <%= link_to "ログイン", new_user_session_path %>
+  <%= link_to "sign up", new_user_registration_path %>
 </div>
