--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,11 @@
 <div class="navbar bg-primary text-primary-content">
   <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
   <%= link_to "sign up", new_user_registration_path %>
-  <%
-=begin%>
- <%= link_to "Sign Up with Google", user_google_oauth2_omniauth_authorize_path, data: { "turbo-method": :post } %> 
-<%
-=end%>
-<%= link_to "Sign Up with Google", user_google_oauth2_omniauth_authorize_path, data: { "turbo-method": :post }, class: "btn btn-secondary" %>
+
+<%= form_with url: user_google_oauth2_omniauth_authorize_path, method: :post do %>
+  <%= button_tag "Sign Up with Google", class: "btn btn-secondary" %>
+<% end %>
+
 
 <% if user_signed_in? %>
   <%= link_to 'Logout', destroy_user_session_path, data: { turbo_method: :delete }, class: "btn btn-primary" %>
