--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,12 +2,14 @@
   <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
   <%= link_to "sign up", new_user_registration_path %>
 
-<%= button_to "Sign Up with Google", user_google_oauth2_omniauth_authorize_path, method: :post, class: "btn btn-secondary" %>
 
 <% if user_signed_in? %>
   <%= link_to 'Logout', destroy_user_session_path, data: { turbo_method: :delete }, class: "btn btn-primary" %>
+  <%= button_to 'Logout', destroy_user_session_path, method: :delete, class: "btn btn-primary" %>
+
 <% else %>
   <%= link_to 'Login', new_user_session_path, class: "btn btn-secondary" %>
+<%= button_to "Sign Up with Google", user_google_oauth2_omniauth_authorize_path, method: :post, class: "btn btn-secondary" %>
 <% end %>
 
 </div>
