--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -9,8 +9,15 @@
   right: 0;
 }
 
+body {
+  position: relative;
+  min-height: 100vh;
+  margin: 0;
+  padding-bottom: 300px; /* フッターの高さに合わせて調整 */
+}
+
 .footer {
-  position: absolute; 
+  position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
