--- a/app/views/shared/_chart.html.erb
+++ b/app/views/shared/_chart.html.erb
@@ -4,7 +4,7 @@
 <canvas id="totalTimeChart" width="400" height="200"></canvas>
 
 <script>
-var data = {
+var chartData = {
   labels: ['6日前', '5日前', '4日前', '3日前', '2日前', '1日前', '今日'],  // セッション名または日付など
   datasets: [{
     label: 'Total Time (minutes)',
@@ -26,7 +26,7 @@ var data = {
 var ctx = document.getElementById('totalTimeChart').getContext('2d');
 var totalTimeChart = new Chart(ctx, {
   type: 'bar',  // barタイプのグラフを指定
-  data: data,
+  data: chartData,
   options: {
     scales: {
       y: {
