--- a/app/views/shared/_line.html.erb
+++ b/app/views/shared/_line.html.erb
@@ -1,7 +1,7 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 
-<select id="month-selector">
+<select id="month-selector" class="select select-bordered max-w-xs">
   <option value="1">1月</option>
   <option value="2">2月</option>
   <option value="3">3月</option>
