--- a/app/views/dashboard/after_login.html.erb
+++ b/app/views/dashboard/after_login.html.erb
@@ -5,6 +5,23 @@
   </div>
 </div>
 
+  <div id="dashboard-data">
+    <% if current_user.dashboards.any? %>
+      <h3>ダッシュボードデータ:</h3>
+      <ul>
+        <% current_user.dashboards.each do |dashboard| %>
+          <li>
+            <%= "ID: #{dashboard.id}, 開始時間: #{dashboard.start_time}, 終了時間: #{dashboard.finish_time}, 総時間: #{dashboard.total_time}" %>
+          </li>
+        <% end %>
+      </ul>
+    <% else %>
+      <p>ダッシュボードデータがありません。</p>
+    <% end %>
+  </div>
+</div>
+
+<div>
 <script>
   document.getElementById('show-token-btn').addEventListener('click', function() {
     var token = document.getElementById('token');
