--- a/app/views/shared/_line.html.erb
+++ b/app/views/shared/_line.html.erb
@@ -38,7 +38,7 @@
               });
 
           const data = response.data;
-          // console.log(data);
+          console.log(data);
 
           const values = Object.values(response.data);
           console.log(values);
