--- a/app/views/dashboard/edit.html.erb
+++ b/app/views/dashboard/edit.html.erb
@@ -1,7 +1,6 @@
-<!-- app/views/dashboards/edit.html.erb -->
 <%= form_for @dashboard do |f| %>
-  <div class="flex flex-col items-center ">
-    <!-- フォームフィールドを追加 -->
+  <div class="flex flex-col items-center">
+    <!-- フォームフィールド -->
     <div class="field mb-4">
       <%= f.label :start_time %>
       <%= f.datetime_select :start_time %>
@@ -11,10 +10,14 @@
       <%= f.datetime_select :finish_time %>
     </div>
 
-    <!-- 更新と削除ボタンを横並びに配置 -->
-    <div class="flex justify-center">
-      <%= f.submit "更新", class: "btn mr-2" %>
-      <%= button_to "削除", dashboard_path(@dashboard), method: :delete, form: {class: "inline"}, class: "btn ml-2" %>
+    <!-- 更新ボタン -->
+    <div class="mt-4">
+      <%= f.submit "更新", class: "btn" %>
     </div>
   </div>
 <% end %>
+
+<!-- 削除ボタンコンテナ -->
+<div class="flex flex-col items-center mt-2">
+  <%= button_to "削除", dashboard_path(@dashboard), method: :delete, form: { class: "inline" }, class: "btn" %>
+</div>
