--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,6 +1,6 @@
 <div class="collapse collapse-arrow bg-base-200">
   <% if @dashboards_of_day.empty? %>
-    <div class="p-4 text-center text-lg font-bold text-red-500">
+    <div class="p-4 text-center text-lg font-bold ">
       表示するデータがありません。
     </div>
   <% else %>
