--- a/app/views/dashboard/how_to_use.html.erb
+++ b/app/views/dashboard/how_to_use.html.erb
@@ -40,7 +40,7 @@
             <code>echo 'export CUSTOM_TOKEN="<%= current_user.custom_token %>"' &gt;&gt; ~/.zshrc</code><br>
             <code>source ~/.zshrc</code>
             <p><strong>bashを使用している場合:</strong></p>
-            <code>echo 'export CUSTOM_TOKEN="your_token"' &gt;&gt; ~/.bashrc</code><br>
+            <code>echo 'export CUSTOM_TOKEN="<%= current_user.custom_token %>"' &gt;&gt; ~/.bashrc</code><br>
             <code>source ~/.bashrc</code>
         </section>
 
