--- a/app/views/dashboard/how_to_use.html.erb
+++ b/app/views/dashboard/how_to_use.html.erb
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>StudyLine Gem 使用方法</h1>
+        <h1>StudyLine gem 使用方法</h1>
         <section>
             <h2>Rubyのバージョン確認</h2>
             <p>Gem <code>study_line</code> はRuby 2.6.0以上でのみ使用可能です。</p>
