contoroller分割 study_sessions #27

--- a/app/views/shared/_line.html.erb
+++ b/app/views/shared/_line.html.erb
@@ -33,7 +33,7 @@
           const year = now.getFullYear();
     
           // バックエンドから選択した月のデータを取得
-          const response = await axios.get(`/dashboard/after_login/${year}/${month}`, {
+          const response = await axios.get(`/dashboard/index/${year}/${month}`, {
                   headers: {
                       Accept: 'application/json'
                   }
