--- a/app/views/dashboard/edit.html.erb
+++ b/app/views/dashboard/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @dashboard do |f| %>
+<%= form_for @study_record, url: dashboard_path(@study_record) do |f| %>
   <div class="flex flex-col items-center">
     <!-- フォームフィールド -->
     <div class="field mb-4">
@@ -19,5 +19,5 @@
 
 <!-- 削除ボタンコンテナ -->
 <div class="flex flex-col items-center mt-2">
-  <%= button_to "削除", dashboard_path(@dashboard), method: :delete, form: { class: "inline" }, class: "btn" %>
+  <%= button_to "削除", dashboard_path(@study_record), method: :delete, form: { class: "inline" }, class: "btn" %>
 </div>
