--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar bg-primary text-primary-content">
-  <%= link_to 'StudyLine', dashboard_after_login_path, class: 'btn btn-ghost normal-case text-xl' %>
+  <%= link_to 'StudyLine', dashboard_index_path, class: 'btn btn-ghost normal-case text-xl' %>
 
   <div class="ml-auto">
     <% if user_signed_in? %>
