--- a/app/views/static_pages/how_to_use.html.erb
+++ b/app/views/static_pages/how_to_use.html.erb
@@ -20,6 +20,17 @@
             border-radius: 3px;
             font-family: 'Courier New', Courier, monospace;
         }
+        pre {
+            background-color: #f4f4f4;
+            padding: 10px;
+            border-radius: 5px;
+            font-family: 'Courier New', Courier, monospace;
+            overflow-x: auto; /* 長いコードのスクロールバー対応 */
+        }
+        .copy-button {
+            margin-left: 10px; /* コピーボタンとコードの間隔 */
+            vertical-align: middle; /* ボタンをコードの中央に配置 */
+        }
     </style>
 </head>
 <body>
@@ -29,25 +40,24 @@
             <h2>Rubyのバージョン確認</h2>
             <p>Gem <code>study_line</code> はRuby 2.6.0以上でのみ使用可能です。</p>
             <p>Rubyのバージョンを確認するには、以下のコマンドを実行します：</p>
-            <code>ruby -v</code><br>
-            <code>rbenv versions</code>
+            <pre><code>ruby -v</code> <button class="btn btn-xs btn-outline copy-button">Copy</button></pre>
+            <pre><code>rbenv versions</code><button class="btn btn-xs btn-outline copy-button">Copy</button></pre>
         </section>
 
         <section>
             <h2>環境変数にトークンを保存</h2>
             <p>ログイン後、トークンを環境変数に保存します。</p>
             <p><strong>zshを使用している場合:</strong></p>
-            <code>echo 'export CUSTOM_TOKEN="<%= current_user.custom_token %>"' &gt;&gt; ~/.zshrc</code><br>
-            <code>source ~/.zshrc</code>
+            <pre><code>echo 'export CUSTOM_TOKEN="<%= current_user.custom_token %>"' &gt;&gt; ~/.zshrc</code><button class="btn btn-xs btn-outline copy-button">Copy</button></pre><br>
+            <pre><code>source ~/.zshrc</code><button class="btn btn-xs btn-outline copy-button">Copy</button></pre>
             <p><strong>bashを使用している場合:</strong></p>
-            <code>echo 'export CUSTOM_TOKEN="<%= current_user.custom_token %>"' &gt;&gt; ~/.bashrc</code><br>
-            <code>source ~/.bashrc</code>
+            <pre><code>echo 'export CUSTOM_TOKEN="<%= current_user.custom_token %>"' &gt;&gt; ~/.bashrc</code><button class="btn btn-xs btn-outline copy-button">Copy</button></pre><br>
+            <pre><code>source ~/.bashrc</code><button class="btn btn-xs btn-outline copy-button">Copy</button></pre>
         </section>
 
         <section>
             <h2>Gemのインストール</h2>
-            <p><code>study_line</code> Gemをインストールするには、以下のコマンドを使用します：</p>
-            <code>gem install study_line</code>
+            <pre><code>gem install study_line</code><button class="btn btn-xs btn-outline copy-button">Copy</button></pre>
             <p>これにより、ターミナルから以下のコマンドが使用可能になります。</p>
         </section>
 
@@ -65,5 +75,17 @@
             <code>stl start -t "タグ名"</code>
         </section>
     </div>
+
+        <script>
+        document.querySelectorAll('.copy-button').forEach(button => {
+            button.addEventListener('click', function() {
+                const code = this.previousElementSibling.innerText;
+                navigator.clipboard.writeText(code).then(() => {
+                    alert('コピーしました: ' + code);
+                });
+            });
+        });
+    </script>
+
 </body>
 </html>
