--- a/app/views/static_pages/how_to_use.html.erb
+++ b/app/views/static_pages/how_to_use.html.erb
@@ -46,7 +46,7 @@
 
         <section>
             <h2>環境変数にトークンを保存</h2>
-            <p>ログイン後、トークンを環境変数に保存します。</p>
+            <p>以下のコマンドでホームディレクトリ直下にstl_configというファイルを作成しトークンを保存します。</p>
             <pre><code>stl configure <%= current_user.custom_token %></code><button class="btn btn-xs btn-outline copy-button">Copy</button></pre><br>
         </section>
 
